<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg_middle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_order_dialog_title_top"
        android:text="@string/order_dialog_prompt"
        android:textSize="@dimen/font_mine_order_size_28px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delete_prompt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="是否确定删除该订单"
        android:textSize="@dimen/font_mine_order_size_32px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/cancel_delete_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30px"
        android:text="@string/cancel"
        android:textColor="@drawable/selector_bg_button"
        android:textSize="@dimen/font_mine_order_size_30px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_delete_order" />

    <TextView
        android:id="@+id/confirm_delete_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30px"
        android:text="@string/confirm"
        android:textColor="@drawable/selector_bg_button"
        android:textSize="@dimen/font_mine_order_size_30px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_delete_order"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>