<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xiaoma.personal.feedback.ui.view.QuestionCategoryView
        android:id="@+id/qcv_feature_category"
        android:layout_width="@dimen/width_question_category"
        android:layout_height="@dimen/height_question_category"
        android:background="@drawable/icon_question_category_unselect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/question_by_function"
        android:textSize="@dimen/font_question_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.xiaoma.personal.feedback.ui.view.QuestionCategoryView
        android:id="@+id/qcv_suggestions"
        android:layout_width="@dimen/width_question_category"
        android:layout_height="@dimen/height_question_category"
        android:layout_marginStart="@dimen/size_question_type_margin"
        android:background="@drawable/icon_question_category_unselect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/question_by_suggestion"
        android:textSize="@dimen/font_question_by"
        app:layout_constraintStart_toEndOf="@id/qcv_feature_category"
        app:layout_constraintTop_toBottomOf="@id/tv_select_category"
        app:layout_constraintTop_toTopOf="parent" />


    <com.xiaoma.personal.feedback.ui.view.QuestionCategoryView
        android:id="@+id/qcv_other"
        android:layout_width="@dimen/width_question_category"
        android:layout_height="@dimen/height_question_category"
        android:layout_marginStart="@dimen/size_question_type_margin"
        android:background="@drawable/icon_question_category_unselect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/question_by_other"
        android:textSize="@dimen/font_question_by"
        app:layout_constraintStart_toEndOf="@id/qcv_suggestions"
        app:layout_constraintTop_toBottomOf="@id/tv_select_category"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>